tests/playground/neg/sample/A_1.scala
object A {
  val name = "World"afwsf 
}// error